--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
   <header>
     <h1>Estudiante: Luis Marcelo </h1>
-    <img src="imagenes/profile.png" alt="My Profile Picture">
+    <img src="imagenes/Luis.jpg" alt="Foto de Luis Marcelo">
   </header> 
   <main>
-    <h2>Diseño Web - Assignment Portal</h2>
+    <h2>Diseño Web - Portal De Asignación </h2>
     <ul>
       <li> Practica 1:<a href="#">Servidor Web </a></li>
       <li>Practica 2:<a href="#">HTML</a></li>
@@ -25,7 +25,7 @@
  
   <footer>
     <p>
-      &copy;2021 Luis Marcelo - Location: Bolivia  
+      &copy;2021 Luis Marcelo - Ubicación: Bolivia  
       <a href="http://www.upds.edu.bo/"> UPDS - Cbba.</a>
     </p>
   </footer>
