--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main>
     <h2>Diseño Web - Portal De Asignación </h2>
     <ul>
-      <li> Practica 1:<a href="#">Servidor Web </a></li>
+      <li> Practica 1:<a href="https://luis-marcelo-bs.github.io/web-o-o/">Servidor Web </a></li>
       <li>Practica 2:<a href="#">HTML</a></li>
       
     </ul>
