--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>Diseño Web - Portal De Asignación </h2>
     <ul>
       <li> Practica 1:<a href="https://luis-marcelo-bs.github.io/web-o-o/">Servidor Web </a></li>
-      <li>Practica 2:<a href="#">HTML</a></li>
+      <li>Practica 2:<a href="asignaciones/practica 2#/">HTML</a></li>
       
     </ul>
     
