--- a/fixedhtml.html
+++ b/fixedhtml.html
@@ -42,7 +42,7 @@
                 </li>
                 <li>Communication</li>
             </ul>
-            
+
             <div class="style1 right">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dictum urna dui. Ut imperdiet facilisis sapien. Nunc ultrices sem eget ligula hendrerit pulvinar non et tellus. Ut dignissim vel ipsum sagittis faucibus. Aenean iaculis eleifend nulla id rhoncus. Cras velit leo, maximus et finibus a, molestie eget quam. 
             </div>
@@ -61,7 +61,7 @@
                     <p> Subscribe to our Newsletter to get daily specials emailed to you directly!! </p>
 
                 <footer>
-                    <p>To find out more, contact Bobby at 4455.</p>
+                    <p>To find out more, contact Bobby at 4455..</p>
                     <p>Copyright -C- 2016 |  The Quad-Cities Transporation Center   | Spokane Washington </p>
                 </footer>
         
