--- a/proyecto/proyec.html
+++ b/proyecto/proyec.html
@@ -13,15 +13,30 @@
         <header>
             <nav>
                 <ul>
-                    <li>Inicio</li>
-                    <li>Atencion al cliente 
+                    <li><a href="proyec.html">Inicio</a></li>
+                    <li>Divisiones
                         <ul>
-                            <li>Division de Telecumicaciones</li>
-                            <li>Divison de Seguridad</li>
-                            <li>Division de Tecnologia</li>
+                            <li>Division de Telecomunicaciones
+                                <ul>
+                                    <li>Productos</li>
+                                    <li>Servicios</li>
+                                </ul>
+                            </li>
+                            <li>Divison de Seguridad
+                                <ul>
+                                    <li>Productos</li>
+                                    <li>Servicios</li>
+                                </ul>
+                            </li>
+                            <li>Division de Tecnologia
+                                <ul>
+                                    <li>Productos</li>
+                                    <li>Servicios</li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
-                    <li>Informacion</li>
+                    <li><a> <a href="Contac.html">Contactenos </a></li>
                 </ul>
             </nav>
         </header>
@@ -45,7 +60,7 @@
         </main>
 
         <aside>
-            <div class="est_aside">
+            <div class="Aten">
                 <h4>Atencion</h4>
                 <p>Todo reclamo sera valido si se presenta factura. Cada servicio tiene un periodo limite de garantia</p>
             </div>
