--- a/proyecto/tegnopro.html
+++ b/proyecto/tegnopro.html
@@ -11,12 +11,12 @@
     <h1>Productos</h1>
     <p>Te ofrecemos variedades de productos tecnológicos garantizados de acuerdo al uso específico que usted necesita</p>
     <div class="img1">
-         <a href="computadoras.html"><img src="#" alt="descripcion de imagen"></a>
-         <p>Compitadoras</p>
+        <h3>Computadoras</h3>
+         <a href="computadoras.html"><img src="photoo/computadora.jpg" alt="descripcion de imagen" width="200"></a>    
     </div>
     <div class="img2">
-        <a href="impresoras.html"><img src="#" alt="descripcion de imagen"></a>
-        <p>Impresoras</p>
+        <h3>Impresoras</h3>
+        <a href="impresoras.html"><img src="photoo/impresora.jpg" alt="descripcion de imagen" width="200"></a>
     </div>
 
     <div class="final">
