--- a/proyecto/proyec.html
+++ b/proyecto/proyec.html
@@ -30,8 +30,9 @@
                             </li>
                             <li>Division de Tecnologia
                                 <ul>
-                                    <li>Productos</li>
-                                    <li>Servicios</li>
+                                    <li><a href="tegnopro.html">Productos</a></li>
+                                    <li><a href="servicios.html">Servicios</a></li>
+
                                 </ul>
                             </li>
                         </ul>
