--- a/proyecto/tegnopro.html
+++ b/proyecto/tegnopro.html
@@ -8,6 +8,41 @@
     <link rel="stylesheet" href="proyect.css/tegnpro.css">
 </head>
 <body>
+
+    <div class="contenedor">
+        <img src="photoo/principal.png" alt="descripcion de imagen" width="200">
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="proyec.html">Inicio</a></li>
+                    <li>Divisiones
+                        <ul>
+                            <li>Division de Telecomunicaciones
+                                <ul>
+                                    <li>Productos</li>
+                                    <li>Servicios</li>
+                                </ul>
+                            </li>
+                            <li>Divison de Seguridad
+                                <ul>
+                                    <li>Productos</li>
+                                    <li>Servicios</li>
+                                </ul>
+                            </li>
+                            <li>Division de Tecnologia
+                                <ul>
+                                    <li><a href="tegnopro.html">Productos</a></li>
+                                    <li><a href="servicios.html">Servicios</a></li>
+
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li><a> <a href="Contac.html">Contactenos </a></li>
+                </ul>
+            </nav>
+        </header>
+
     <h1>Productos</h1>
     <p>Te ofrecemos variedades de productos tecnológicos garantizados de acuerdo al uso específico que usted necesita</p>
     <div class="img1">
