--- a/proyecto/Contac.html
+++ b/proyecto/Contac.html
@@ -7,7 +7,43 @@
     <title>Documento</title>
     <link rel="stylesheet" href="proyect.css/conta.css">
 </head>
+
 <body>
+
+    <div class="contenedor">
+        <img src="photoo/principal.png" alt="descripcion de imagen" width="200">
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="proyec.html">Inicio</a></li>
+                    <li>Divisiones
+                        <ul>
+                            <li>Division de Telecomunicaciones
+                                <ul>
+                                    <li>Productos</li>
+                                    <li>Servicios</li>
+                                </ul>
+                            </li>
+                            <li>Divison de Seguridad
+                                <ul>
+                                    <li>Productos</li>
+                                    <li>Servicios</li>
+                                </ul>
+                            </li>
+                            <li>Division de Tecnologia
+                                <ul>
+                                    <li><a href="tegnopro.html">Productos</a></li>
+                                    <li><a href="servicios.html">Servicios</a></li>
+
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li><a> <a href="Contac.html">Contactenos </a></li>
+                </ul>
+            </nav>
+        </header>
+
     <div class="cont1">
         <h1>Direccion y Contactos</h1>
         <h2>Santa Cruz</h2>
@@ -28,7 +64,7 @@
             <li>Telefono:</li>
             <li>E-mail:</li>
     </div>
-    
+
     <div class="final">
         <aside>
             <div class="Aten">
