--- a/proyecto/impresoras.html
+++ b/proyecto/impresoras.html
@@ -8,6 +8,41 @@
     <link rel="stylesheet" href="proyect.css/impre.css">
 </head>
 <body>
+
+    <div class="contenedor">
+        <img src="photoo/principal.png" alt="descripcion de imagen" width="200">
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="proyec.html">Inicio</a></li>
+                    <li>Divisiones
+                        <ul>
+                            <li>Division de Telecomunicaciones
+                                <ul>
+                                    <li>Productos</li>
+                                    <li>Servicios</li>
+                                </ul>
+                            </li>
+                            <li>Divison de Seguridad
+                                <ul>
+                                    <li>Productos</li>
+                                    <li>Servicios</li>
+                                </ul>
+                            </li>
+                            <li>Division de Tecnologia
+                                <ul>
+                                    <li><a href="tegnopro.html">Productos</a></li>
+                                    <li><a href="servicios.html">Servicios</a></li>
+
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li><a> <a href="Contac.html">Contactenos </a></li>
+                </ul>
+            </nav>
+        </header>
+
     <div class="laser">
         <h1>Impresoras Laser</h1>
         <p>ITX le presenta una línea de impresoras láser en color y blanco y negro que proporcionan resultados de alta calidad para la impresión comercial. Gran calidad profesional y rapidez para sus impresiones con Tecnología de color.</p>
