--- a/proyecto/servicios.html
+++ b/proyecto/servicios.html
@@ -8,6 +8,41 @@
     <link rel="stylesheet" href="proyect.css/pro.css">
 </head>
 <body>
+
+    <div class="contenedor">
+        <img src="photoo/principal.png" alt="descripcion de imagen" width="200">
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="proyec.html">Inicio</a></li>
+                    <li>Divisiones
+                        <ul>
+                            <li>Division de Telecomunicaciones
+                                <ul>
+                                    <li>Productos</li>
+                                    <li>Servicios</li>
+                                </ul>
+                            </li>
+                            <li>Divison de Seguridad
+                                <ul>
+                                    <li>Productos</li>
+                                    <li>Servicios</li>
+                                </ul>
+                            </li>
+                            <li>Division de Tecnologia
+                                <ul>
+                                    <li><a href="tegnopro.html">Productos</a></li>
+                                    <li><a href="servicios.html">Servicios</a></li>
+
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li><a> <a href="Contac.html">Contactenos </a></li>
+                </ul>
+            </nav>
+        </header>
+
     <div class="servi">
         <h1>Servicios</h1>
         <p>En ATX contamos con Servicio Técnico Certificado con la ISO 9001:2008, con personal altamente calificado y especializado, además de la más avanzada infraestructura técnica en servicios de reparación y atención directa, donde el concepto de eficacia es nuestra base de trabajo.</p>
