--- a/proyecto/seguridad.html
+++ b/proyecto/seguridad.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, inictial-scale =1.0">
     <title>Documento</title>
-    <link rel="stylesheet" href="proyect.css/pro.css">
+    <link rel="stylesheet" href="proyect.css/segu.css">
 </head>
 <body>
+
     <div class="contenedor">
         <img src="photoo/principal.png" alt="descripcion de imagen" width="200">
         <header>
@@ -42,24 +43,18 @@
             </nav>
         </header>
 
-        <main>   
-                
-            <article class="Quienes">    
-                <h1>Somos ITX</h1>
-                <h5>Information Techology eXperts</h5>
-            </article>
-            <p class="Quienes2">Somos <strong>ITX</strong>, una empresa dedicada a ofrecer productos y servicios que estén a la vanguardia de las últimas tendencias que el mercado demanda.<br>
-                Reunimos nuestros esfuerzos y trabajamos profesionalmente colaborando en un ambiente multidisciplinario, el cual permite un compromiso del personal y las altas gerencias para:
-                <ul>
-                    <li>Asegurar el cumplimiento de requisitos aplicables y normativas que regulan nuestro campo de acción.</li>
-                    <li>Satisfacer los requerimientos de nuestros clientes, basándonos en la filosofía de ofrecerles soluciones integrales de productos y servicios de la más alta calidad.</li>
-                    <li>Desarrollar continuamente la competencia de nuestro personal, valorizando y reconociéndolo en las tareas que desempeñan, siendo profesionales al guiarnos bajo una cultura institucional que funge como estándar.</li>
-                    <li>Mejorar nuestros procesos internos a fin de prevalecer como diferenciadores en calidad, precio e innovación.</li>
-                </ul>
-            </p>
+    <h1>Productos</h1>
+    <p>Te ofrecemos variedades de productos seguridad garantizados de acuerdo al uso específico que usted necesita.</p>
+    <div class="img1">
+        <h3>Sensores-Alarmas</h3>
+         <a href="sensores.html"><img src="photoo/segu.jpg" alt="descripcion de imagen" width="200"></a>    
+    </div>
+    <div class="img2">
+        <h3>Camaras De Seguridad</h3>
+        <a href="camaras.html"><img src="photoo/camaras.jpg" alt="descripcion de imagen" width="200"></a>
+    </div>
 
-        </main>
-
+    <div class="final">
         <aside>
             <div class="Aten">
                 <h4>Atencion</h4>
