--- a/proyecto/sensores.html
+++ b/proyecto/sensores.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, inictial-scale =1.0">
     <title>Documento</title>
-    <link rel="stylesheet" href="proyect.css/pro.css">
+    <link rel="stylesheet" href="proyect.css/segu.css">
 </head>
 <body>
+
     <div class="contenedor">
         <img src="photoo/principal.png" alt="descripcion de imagen" width="200">
         <header>
@@ -41,25 +42,23 @@
                 </ul>
             </nav>
         </header>
-
-        <main>   
-                
-            <article class="Quienes">    
-                <h1>Somos ITX</h1>
-                <h5>Information Techology eXperts</h5>
-            </article>
-            <p class="Quienes2">Somos <strong>ITX</strong>, una empresa dedicada a ofrecer productos y servicios que estén a la vanguardia de las últimas tendencias que el mercado demanda.<br>
-                Reunimos nuestros esfuerzos y trabajamos profesionalmente colaborando en un ambiente multidisciplinario, el cual permite un compromiso del personal y las altas gerencias para:
-                <ul>
-                    <li>Asegurar el cumplimiento de requisitos aplicables y normativas que regulan nuestro campo de acción.</li>
-                    <li>Satisfacer los requerimientos de nuestros clientes, basándonos en la filosofía de ofrecerles soluciones integrales de productos y servicios de la más alta calidad.</li>
-                    <li>Desarrollar continuamente la competencia de nuestro personal, valorizando y reconociéndolo en las tareas que desempeñan, siendo profesionales al guiarnos bajo una cultura institucional que funge como estándar.</li>
-                    <li>Mejorar nuestros procesos internos a fin de prevalecer como diferenciadores en calidad, precio e innovación.</li>
-                </ul>
-            </p>
-
-        </main>
-
+    <div class="sensores">
+        <h1>Sensores</h1>
+        <img src="#" alt="imagen" width="200">
+        <br>
+        <img src="#" alt="imagen" width="200">
+        <br>
+        <img src="#" alt="imagen" width="200">
+    </div>
+    <div class="alarmas">
+        <h1>Alarmas</h1>
+        <img src="#" alt="imagen" width="200">
+        <br>
+        <img src="#" alt="imagen" width="200">
+        <br>
+        <img src="#" alt="imagen" width="200">
+    </div>
+    <div class="final">
         <aside>
             <div class="Aten">
                 <h4>Atencion</h4>
