--- a/proyecto/Contac.html
+++ b/proyecto/Contac.html
@@ -26,8 +26,8 @@
                             </li>
                             <li>Divison de Seguridad
                                 <ul>
-                                    <li>Productos</li>
-                                    <li>Servicios</li>
+                                    <li><a href="seguridad.html">Productos</a></li>
+                                    <li><a href="servicios.html">Servicios</a></li>
                                 </ul>
                             </li>
                             <li>Division de Tecnologia
