--- a/proyecto/tegnopro.html
+++ b/proyecto/tegnopro.html
@@ -25,9 +25,8 @@
                             </li>
                             <li>Divison de Seguridad
                                 <ul>
-                                    <li>Productos</li>
-                                    <li>Servicios</li>
-                                </ul>
+                                    <li><a href="seguridad.html">Productos</a></li>
+                                    <li><a href="servicios.html">Servicios</a></li>
                             </li>
                             <li>Division de Tecnologia
                                 <ul>
