--- a/proyecto/telefono.html
+++ b/proyecto/telefono.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, inictial-scale =1.0">
     <title>Documento</title>
-    <link rel="stylesheet" href="proyect.css/conta.css">
+    <link rel="stylesheet" href="proyect.css/telefonofijo.css">
 </head>
-
 <body>
 
     <div class="contenedor">
@@ -43,28 +42,15 @@
                 </ul>
             </nav>
         </header>
-
-    <div class="cont1">
-        <h1>Direccion y Contactos</h1>
-        <h2>Santa Cruz</h2>
-        <ul>
-            <li>Direccion:</li>
-            <li>Telefono:</li>
-            <li>E-mail:</li>
-        </ul>
-        <h2>Cochabamba</h2>
-        <ul>
-            <li>Direccion:</li>
-            <li>Telefono:</li>
-            <li>E-mail:</li>
-        </ul>
-        <h2>La Paz</h2>
-        <ul>
-            <li>Direccion:</li>
-            <li>Telefono:</li>
-            <li>E-mail:</li>
+    <div class="telefono">
+        <h1>Telefonos-Fijos</h1>
+        <img src="#" alt="imagen" width="200">
+        <br>
+        <img src="#" alt="imagen" width="200">
+        <br>
+        <img src="#" alt="imagen" width="200">
     </div>
-
+    
     <div class="final">
         <aside>
             <div class="Aten">
@@ -77,4 +63,5 @@
         </footer>
     </div>
 </body>
+
 </html>
