--- a/proyecto/camaras.html
+++ b/proyecto/camaras.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, inictial-scale =1.0">
     <title>Documento</title>
-    <link rel="stylesheet" href="proyect.css/segu.css">
+    <link rel="stylesheet" href="proyect.css/camarass.css">
 </head>
 <body>
 
@@ -19,8 +19,8 @@
                         <ul>
                             <li>Division de Telecomunicaciones
                                 <ul>
-                                    <li>Productos</li>
-                                    <li>Servicios</li>
+                                    <li><a href="telecomu.html">Productos</a></li>
+                                    <li><a href="servicios.html">Servicios</a></li>
                                 </ul>
                             </li>
                             <li>Divison de Seguridad
