--- a/proyecto/proyec.html
+++ b/proyecto/proyec.html
@@ -18,8 +18,8 @@
                         <ul>
                             <li>Division de Telecomunicaciones
                                 <ul>
-                                    <li>Productos</li>
-                                    <li>Servicios</li>
+                                    <li><a href="telecomu.html">Productos</a></li>
+                                    <li><a href="servicios.html">Servicios</a></li>
                                 </ul>
                             </li>
                             <li>Divison de Seguridad
