--- a/proyecto/telecomu.html
+++ b/proyecto/telecomu.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, inictial-scale =1.0">
     <title>Documento</title>
-    <link rel="stylesheet" href="proyect.css/conta.css">
+    <link rel="stylesheet" href="proyect.css/telecomunica.css">
 </head>
-
 <body>
 
     <div class="contenedor">
@@ -20,15 +19,13 @@
                         <ul>
                             <li>Division de Telecomunicaciones
                                 <ul>
-                                    <li><a href="telecomu.html">Productos</a></li>
-                                    <li><a href="servicios.html">Servicios</a></li>
+                                    v
                                 </ul>
                             </li>
                             <li>Divison de Seguridad
                                 <ul>
                                     <li><a href="seguridad.html">Productos</a></li>
                                     <li><a href="servicios.html">Servicios</a></li>
-                                </ul>
                             </li>
                             <li>Division de Tecnologia
                                 <ul>
@@ -44,25 +41,15 @@
             </nav>
         </header>
 
-    <div class="cont1">
-        <h1>Direccion y Contactos</h1>
-        <h2>Santa Cruz</h2>
-        <ul>
-            <li>Direccion:</li>
-            <li>Telefono:</li>
-            <li>E-mail:</li>
-        </ul>
-        <h2>Cochabamba</h2>
-        <ul>
-            <li>Direccion:</li>
-            <li>Telefono:</li>
-            <li>E-mail:</li>
-        </ul>
-        <h2>La Paz</h2>
-        <ul>
-            <li>Direccion:</li>
-            <li>Telefono:</li>
-            <li>E-mail:</li>
+    <h1>Productos</h1>
+    <p>Te ofrecemos variedades de productos tecnológicos garantizados de acuerdo al uso específico que usted necesita</p>
+    <div class="img1">
+        <h3>Routers</h3>
+         <a href="router.html"><img src="photoo/router.jpg" alt="descripcion de imagen" width="200"></a>    
+    </div>
+    <div class="img2">
+        <h3>Telefonos-Fijos</h3>
+        <a href="telefono.html"><img src="photoo/fijo.jpg" alt="descripcion de imagen" width="200"></a>
     </div>
 
     <div class="final">
@@ -77,4 +64,5 @@
         </footer>
     </div>
 </body>
+
 </html>
