--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <li> Practica 1:<a href="https://luis-marcelo-bs.github.io/web-o-o/">Servidor Web </a></li>
       <li> Practica 2:<a href="fixedhtml.html">HTML</a> </li>
       <li>Proyecto:<a href="proyecto/proyec.html">clic</a> </li>
+      <li>formulario:<a href="formulario.html">clic</a> </li>
       
     </ul>
     
