--- a/proyecto/html/proyecto.html
+++ b/proyecto/html/proyecto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,35 +8,45 @@
         <link rel="stylesheet" href="css/proyecto.css">
     </head>
     <body>
-        <div id="cont">
-            <h1>Titulo</h1>
+        <div class="cont">  
+            <nav> 
+                <ul>
+                    <div class="con">
+                        <li><a href="proyecto.html">Inicio</a></li>
+                        <li><a href="Servicios.html">Servicios</a> </li>
+                        <li><a href="contactanos.html">Contactanos</a></li>
+                    </div>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul>
-                <li><a href="proyecto.html">Inicio</a></li>
-                <li><a href="Servicios.html">Servicios</a> </li>
-                <li><a href="contactanos.html">Contactanos</a></li>
-            </ul>
-        </nav>
-        <section id="cont1">
+        <br>
+        <section class="cont1">
+            <h1 class="t1">Somos ITX</h1>
+            <h5 class="t1">Information Techology eXperts</h5>
+            <br>
             <article>
-                <h1>Somos ITX</h1>
-                <h5>Information Techology eXperts</h5>
-                <p>Somos <strong>ITX</strong>, una empresa dedicada a ofrecer productos y servicios que estén a la vanguardia de las últimas tendencias que el mercado demanda.<br>
-                    Reunimos nuestros esfuerzos y trabajamos profesionalmente colaborando en un ambiente multidisciplinario, el cual permite un compromiso del personal y las altas gerencias para:
-                    <ul>
-                        <li>Asegurar el cumplimiento de requisitos aplicables y normativas que regulan nuestro campo de acción.</li>
-                        <li>Satisfacer los requerimientos de nuestros clientes, basándonos en la filosofía de ofrecerles soluciones integrales de productos y servicios de la más alta calidad.</li>
-                        <li>Desarrollar continuamente la competencia de nuestro personal, valorizando y reconociéndolo en las tareas que desempeñan, siendo profesionales al guiarnos bajo una cultura institucional que funge como estándar.</li>
-                    </ul>    
+                <p class="p1">Somos <strong>ITX</strong>, una empresa dedicada a ofrecer productos y servicios que estén a la vanguardia de las últimas tendencias que el mercado demanda.</p>
+                <br>
+                <p class="p2">Reunimos nuestros esfuerzos y trabajamos profesionalmente colaborando en un ambiente multidisciplinario, el cual permite un compromiso del personal y las altas gerencias para:</p>
+                <br>
+                <div class="p3">
+                    <p>Asegurar el cumplimiento de requisitos aplicables y normativas que regulan nuestro campo de acción.</p> <br>
+                    <p>Satisfacer los requerimientos de nuestros clientes, basándonos en la filosofía de ofrecerles soluciones integrales de productos y servicios de la más alta calidad.</p><br>
+                    <p>Desarrollar continuamente la competencia de nuestro personal, valorizando y reconociéndolo en las tareas que desempeñan, siendo profesionales al guiarnos bajo una cultura institucional que funge como estándar.</p>
+                </div>    
             </article>
         </section>
-        <aside>
-            <h4>Atencion</h4>
-            <p>Todo reclamo sera valido si se presenta factura. Cada servicio tiene un periodo limite de garantia</p>
-        </aside>
-        <footer>
-            <p>Derechos Reservados &copy;2021 ITX - Ubicación: Bolivia</p>
-        </footer>
+
+        <div id="cont2">
+            <img src="css/imagenes/itx.png" alt="imagen">
+            <aside>
+                <h4>Atencion</h4>
+                <p>Todo reclamo sera valido si se presenta factura. Cada servicio tiene un periodo limite de garantia</p>
+            </aside>
+
+            <footer>
+                <p>Derechos Reservados &copy;2021 ITX - Ubicación: Bolivia</p>
+            </footer>
+        </div>
     </body>
 </html>
