--- a/proyecto/html/proyecto.html
+++ b/proyecto/html/proyecto.html
@@ -1,52 +1,96 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Documento</title>
-        <link rel="stylesheet" href="css/proyecto.css">
-    </head>
-    <body>
-        <div class="cont">  
-            <nav> 
-                <ul>
-                    <div class="con">
-                        <li><a href="proyecto.html">Inicio</a></li>
-                        <li><a href="Servicios.html">Servicios</a> </li>
-                        <li><a href="contactanos.html">Contactanos</a></li>
-                    </div>
-                </ul>
+<head>
+    <title>ProgramaYa!</title>
+    <link rel="stylesheet" href="css/proyecto.css">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <p class="logo">ITX Information Tegnology eXperts</p>
+            <nav>
+                <a href="#somos-proya">Quienes Somos</a>
+                <a href="#nuestros-programas">Nuestros Productos</a>
+                <a href="#caracteristicas">Contactanos</a>
             </nav>
         </div>
-        <br>
-        <section class="cont1">
-            <h1 class="t1">Somos ITX</h1>
-            <h5 class="t1">Information Techology eXperts</h5>
-            <br>
-            <article>
-                <p class="p1">Somos <strong>ITX</strong>, una empresa dedicada a ofrecer productos y servicios que estén a la vanguardia de las últimas tendencias que el mercado demanda.</p>
-                <br>
-                <p class="p2">Reunimos nuestros esfuerzos y trabajamos profesionalmente colaborando en un ambiente multidisciplinario, el cual permite un compromiso del personal y las altas gerencias para:</p>
-                <br>
-                <div class="p3">
-                    <p>Asegurar el cumplimiento de requisitos aplicables y normativas que regulan nuestro campo de acción.</p> <br>
-                    <p>Satisfacer los requerimientos de nuestros clientes, basándonos en la filosofía de ofrecerles soluciones integrales de productos y servicios de la más alta calidad.</p><br>
-                    <p>Desarrollar continuamente la competencia de nuestro personal, valorizando y reconociéndolo en las tareas que desempeñan, siendo profesionales al guiarnos bajo una cultura institucional que funge como estándar.</p>
-                </div>    
-            </article>
-        </section>
+    </header>
 
-        <div id="cont2">
-            <img src="css/imagenes/itx.png" alt="imagen">
-            <aside>
-                <h4>Atencion</h4>
-                <p>Todo reclamo sera valido si se presenta factura. Cada servicio tiene un periodo limite de garantia</p>
-            </aside>
+    <section id="hero">
+        <h1>ITX <br>Information Tegnology eXperts</h1>
+    </section>
 
-            <footer>
-                <p>Derechos Reservados &copy;2021 ITX - Ubicación: Bolivia</p>
-            </footer>
+    <section id="somos-proya">
+        <div class="container">
+            <div class="img-container"></div>
+            <div class="texto">
+
+                <h2>Somos <span class="color-acento">ITX Information Tegnology eXperts</span></h2>
+                <p>Una empresa dedicada a ofrecer productos y servicios que estén a la vanguardia de las últimas tendencias que el mercado demanda. <br>
+                    Reunimos nuestros esfuerzos y trabajamos profesionalmente colaborando en un ambiente multidisciplinario, el cual permite un compromiso del personal y las altas gerencias para:
+                    <ul>
+                        <li>Asegurar el cumplimiento de requisitos aplicables y normativas que regulan nuestro campo de acción.</li> <br>
+                        <li>Satisfacer los requerimientos de nuestros clientes, basándonos en la filosofía de ofrecerles soluciones integrales de productos y servicios de la más alta calidad.</li>
+                    </ul>
+                </p>
+            </div>
         </div>
-    </body>
+    </section>
+
+    <section id="nuestros-programas">
+        <div class="container">
+            <h2>Nuestros Programas</h2>
+            <div class="programas">
+                <div class="carta">
+                    <h3>Programador Front-end</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia ducimus veritatis repellendus?</p>
+                    <button>+ Info</button>
+                </div>
+                <div class="carta">
+                    <h3>Programador Full-Stack</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia ducimus veritatis repellendus?</p>
+                    <button>+ Info</button>
+                </div>
+                <div class="carta">
+                    <h3>Programador Python</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia ducimus veritatis repellendus?</p>
+                    <button>+ Info</button>
+                </div>  
+            </div>
+        </div>
+    </section>
+
+    <section id="caracteristicas">
+        <div class="container">
+            <ul>
+                <li>Cochabamba
+                    <ul>
+                        <li>Numero: 65219887</li>
+                        <li>E-mail: luisss_2000@hotmail.es</li>
+                        <li>Direccion: c/America-belgin-#12</li>
+                    </ul>
+                </li>
+                <li>Santa-Cruz
+                    <ul>
+                        <li>Numero: 65219887</li>
+                        <li>E-mail: luisss_2000@hotmail.es</li>
+                        <li>Direccion: c/America-belgin-#12</li>
+                    </ul>
+                </li>
+                <li>La-Paz
+                    <ul>
+                        <li>Numero: 65219887</li>
+                        <li>E-mail: luisss_2000@hotmail.es</li>
+                        <li>Direccion: c/America-belgin-#12</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <footer>
+        <div class="container2">
+            <p>&copy; ITX 2021</p>
+        </div>
+    </footer>
+</body>
 </html>
