--- a/proyecto/html/proyecto.html
+++ b/proyecto/html/proyecto.html
@@ -42,20 +42,16 @@
             <h2>Nuestros Programas</h2>
             <div class="programas">
                 <div class="carta">
-                    <h3>Programador Front-end</h3>
+                    <h3>Computadoras y Laptops</h3> <br>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia ducimus veritatis repellendus?</p>
                     <button>+ Info</button>
                 </div>
                 <div class="carta">
-                    <h3>Programador Full-Stack</h3>
+                    <h3>Camaras y Alarmas Para El Hogar</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia ducimus veritatis repellendus?</p>
                     <button>+ Info</button>
                 </div>
-                <div class="carta">
-                    <h3>Programador Python</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia ducimus veritatis repellendus?</p>
-                    <button>+ Info</button>
-                </div>  
+                 
             </div>
         </div>
     </section>
@@ -88,8 +84,9 @@
         </div>
     </section>
     <footer>
-        <div class="container2">
-            <p>&copy; ITX 2021</p>
+        <div class="container">
+            <p >Derechos Reservados &copy;2021 ITX - Ubicación: Bolivia</p>
+            
         </div>
     </footer>
 </body>
