--- a/proyecto/html/proyecto.html
+++ b/proyecto/html/proyecto.html
@@ -43,12 +43,12 @@
             <div class="programas">
                 <div class="carta">
                     <h3>Computadoras y Laptops</h3> <br>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia ducimus veritatis repellendus?</p>
+                    <p>-Le ofrecemos las mejores unidades de computo, que mejor se adapte a su uso personal o empresarial.</p>
                     <button>+ Info</button>
                 </div>
                 <div class="carta">
                     <h3>Camaras y Alarmas Para El Hogar</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vero corporis incidunt saepe qui commodi quasi neque veniam quam, aspernatur est beatae maxime animi sed reiciendis mollitia ducimus veritatis repellendus?</p>
+                    <p>-Le ofrecemos las mejores tecnologias de seguridad para su hugar o empresa.</p>
                     <button>+ Info</button>
                 </div>
                  
