--- a/proyecto/html/proyecto.html
+++ b/proyecto/html/proyecto.html
@@ -6,26 +6,26 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="cuerpo">
             <p class="logo">ITX Information Tegnology eXperts</p>
             <nav>
-                <a href="#somos-proya">Quienes Somos</a>
-                <a href="#nuestros-programas">Nuestros Productos</a>
-                <a href="#caracteristicas">Contactanos</a>
+                <a href="#info">Quienes Somos</a>
+                <a href="#menu">Nuestros Productos</a>
+                <a href="#cont">Contactanos</a>
             </nav>
         </div>
     </header>
 
-    <section id="hero">
+    <section id="titulo">
         <h1>ITX <br>Information Tegnology eXperts</h1>
     </section>
 
-    <section id="somos-proya">
-        <div class="container">
-            <div class="img-container"></div>
+    <section id="info">
+        <div class="cuerpo">
+            <div class="img"></div>
             <div class="texto">
 
-                <h2>Somos <span class="color-acento">ITX Information Tegnology eXperts</span></h2>
+                <h2>Somos <span class="color">ITX Information Tegnology eXperts</span></h2>
                 <p>Una empresa dedicada a ofrecer productos y servicios que estén a la vanguardia de las últimas tendencias que el mercado demanda. <br>
                     Reunimos nuestros esfuerzos y trabajamos profesionalmente colaborando en un ambiente multidisciplinario, el cual permite un compromiso del personal y las altas gerencias para:
                     <ul>
@@ -37,16 +37,16 @@
         </div>
     </section>
 
-    <section id="nuestros-programas">
-        <div class="container">
-            <h2>Nuestros Programas</h2>
-            <div class="programas">
-                <div class="carta">
+    <section id="menu">
+        <div class="cuerpo">
+            <h2>Nuestros Productos</h2>
+            <div class="menu2">
+                <div class="division">
                     <h3>Computadoras y Laptops</h3> <br>
                     <p>-Le ofrecemos las mejores unidades de computo, que mejor se adapte a su uso personal o empresarial.</p>
                     <button>+ Info</button>
                 </div>
-                <div class="carta">
+                <div class="division">
                     <h3>Camaras y Alarmas Para El Hogar</h3>
                     <p>-Le ofrecemos las mejores tecnologias de seguridad para su hugar o empresa.</p>
                     <button>+ Info</button>
@@ -56,35 +56,35 @@
         </div>
     </section>
 
-    <section id="caracteristicas">
-        <div class="container">
+    <section id="cont">
+        <div class="cuerpo">
             <ul>
                 <li>Cochabamba
                     <ul>
                         <li>Numero: 65219887</li>
-                        <li>E-mail: luisss_2000@hotmail.es</li>
+                        <li>E-mail: ITX_cbba@hotmail.es</li>
                         <li>Direccion: c/America-belgin-#12</li>
                     </ul>
                 </li>
                 <li>Santa-Cruz
                     <ul>
-                        <li>Numero: 65219887</li>
-                        <li>E-mail: luisss_2000@hotmail.es</li>
-                        <li>Direccion: c/America-belgin-#12</li>
+                        <li>Numero: 60517535</li>
+                        <li>E-mail: ITX_stcrz@hotmail.es</li>
+                        <li>Direccion: c/Idependencia-Ayacucho-#350</li>
                     </ul>
                 </li>
                 <li>La-Paz
                     <ul>
-                        <li>Numero: 65219887</li>
-                        <li>E-mail: luisss_2000@hotmail.es</li>
-                        <li>Direccion: c/America-belgin-#12</li>
+                        <li>Numero: 61239852</li>
+                        <li>E-mail: ITX_lpz@hotmail.es</li>
+                        <li>Direccion: c/Onduras-Trinidad-#120</li>
                     </ul>
                 </li>
             </ul>
         </div>
     </section>
     <footer>
-        <div class="container">
+        <div class="cuerpo">
             <p >Derechos Reservados &copy;2021 ITX - Ubicación: Bolivia</p>
             
         </div>
