--- a/proyecto/html/proyecto.html
+++ b/proyecto/html/proyecto.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>ProgramaYa!</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ITX Information Tegnology eXperts</title>
     <link rel="stylesheet" href="css/proyecto.css">
+    <link rel="shortcut icon"  href="css/imagenes/mini.jpg">
 </head>
 <body>
     <header>
@@ -42,14 +46,15 @@
             <h2>Nuestros Productos</h2>
             <div class="menu2">
                 <div class="division">
-                    <h3>Computadoras y Laptops</h3> <br>
+                    <h3>Computadoras</h3> <br>
                     <p>-Le ofrecemos las mejores unidades de computo, que mejor se adapte a su uso personal o empresarial.</p>
-                    <button>+ Info</button>
+                    <a href="compus.html"><button> + Info</button></a>
                 </div>
                 <div class="division">
-                    <h3>Camaras y Alarmas Para El Hogar</h3>
+                    <h3>Camaras De Seguridad</h3>
+                    <br>
                     <p>-Le ofrecemos las mejores tecnologias de seguridad para su hugar o empresa.</p>
-                    <button>+ Info</button>
+                    <a href="segu.html"><button> + Info</button></a>
                 </div>
                  
             </div>
