--- a/proyecto/html/proyecto.html
+++ b/proyecto/html/proyecto.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ITX Information Tegnology eXperts</title>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="css/proyecto.css">
     <link rel="shortcut icon"  href="css/imagenes/mini.jpg">
 </head>
@@ -12,7 +13,7 @@
     <header>
         <div class="cuerpo">
             <p class="logo">ITX Information Tegnology eXperts</p>
-            <nav>
+            <nav class="x1">
                 <a href="#info">Quienes Somos</a>
                 <a href="#menu">Nuestros Productos</a>
                 <a href="#cont">Contactanos</a>
@@ -27,12 +28,12 @@
     <section id="info">
         <div class="cuerpo">
             <div class="img"></div>
-            <div class="texto">
+            <div class="texto" >
 
-                <h2>Somos <span class="color">ITX Information Tegnology eXperts</span></h2>
-                <p>Una empresa dedicada a ofrecer productos y servicios que estén a la vanguardia de las últimas tendencias que el mercado demanda. <br>
+                <h2 class="co">Somos <span class="color">ITX Information Tegnology eXperts</span></h2>
+                <p class="co2">Una empresa dedicada a ofrecer productos y servicios que estén a la vanguardia de las últimas tendencias que el mercado demanda. <br>
                     Reunimos nuestros esfuerzos y trabajamos profesionalmente colaborando en un ambiente multidisciplinario, el cual permite un compromiso del personal y las altas gerencias para:
-                    <ul>
+                    <ul class="co2">
                         <li>Asegurar el cumplimiento de requisitos aplicables y normativas que regulan nuestro campo de acción.</li> <br>
                         <li>Satisfacer los requerimientos de nuestros clientes, basándonos en la filosofía de ofrecerles soluciones integrales de productos y servicios de la más alta calidad.</li>
                     </ul>
@@ -43,17 +44,17 @@
 
     <section id="menu">
         <div class="cuerpo">
-            <h2>Nuestros Productos</h2>
+            <h2 class="co3">Nuestros Productos</h2>
             <div class="menu2">
                 <div class="division">
-                    <h3>Computadoras</h3> <br>
-                    <p>-Le ofrecemos las mejores unidades de computo, que mejor se adapte a su uso personal o empresarial.</p>
+                    <h3 class="co">Computadoras</h3> <br>
+                    <p class="co2">-Le ofrecemos las mejores unidades de computo, que mejor se adapte a su uso personal o empresarial.</p>
                     <a href="compus.html"><button> + Info</button></a>
                 </div>
                 <div class="division">
-                    <h3>Camaras De Seguridad</h3>
+                    <h3 class="co">Cámaras De Seguridad</h3>
                     <br>
-                    <p>-Le ofrecemos las mejores tecnologias de seguridad para su hugar o empresa.</p>
+                    <p class="co2">-Le ofrecemos las mejores tecnologias de seguridad para su hugar o empresa.</p>
                     <a href="segu.html"><button> + Info</button></a>
                 </div>
                  
@@ -64,21 +65,21 @@
     <section id="cont">
         <div class="cuerpo">
             <ul>
-                <li>Cochabamba
+                <li class="co">Cochabamba
                     <ul>
                         <li>Numero: 65219887</li>
                         <li>E-mail: ITX_cbba@hotmail.es</li>
                         <li>Direccion: c/America-belgin-#12</li>
                     </ul>
                 </li>
-                <li>Santa-Cruz
+                <li class="co2">Santa-Cruz
                     <ul>
                         <li>Numero: 60517535</li>
                         <li>E-mail: ITX_stcrz@hotmail.es</li>
                         <li>Direccion: c/Idependencia-Ayacucho-#350</li>
                     </ul>
                 </li>
-                <li>La-Paz
+                <li class="co">La-Paz
                     <ul>
                         <li>Numero: 61239852</li>
                         <li>E-mail: ITX_lpz@hotmail.es</li>
@@ -90,9 +91,10 @@
     </section>
     <footer>
         <div class="cuerpo">
-            <p >Derechos Reservados &copy;2021 ITX - Ubicación: Bolivia</p>
+            <p class="co2">Derechos Reservados &copy;2021 ITX - Ubicación: Bolivia</p>
             
         </div>
     </footer>
+    <script src="p.js"></script>
 </body>
 </html>
