--- a/proyecto/html/segu.html
+++ b/proyecto/html/segu.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ITX Information Tegnology eXperts</title>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="css/compu.css">
     <link rel="shortcut icon"  href="css/imagenes/mini.jpg">
 </head>
@@ -12,9 +13,9 @@
     <header>
         <div class="cuerpo">
             <p class="logo">ITX Information Tegnology eXperts</p>
-            <nav>
+            <nav class="x1">
                 <a href="proyecto.html">Inicio</a>
-                <a href="#menu">Camaras</a>
+                <a href="#menu">Cámaras</a>
             </nav>
         </div>
     </header>
@@ -25,7 +26,8 @@
 
     <section id="menu">
         <div class="cuerpo">
-            <h2 id="lap2">Camaras</h2>
+            <h2 id="lap2"></h2>
+            <h2 class="co">Cámaras</h2>
             <div class="menu2">
                 <div class="division">
                     <img src="css/imagenes/camara-alta.jpg" alt="imagen" width="340">
@@ -45,9 +47,10 @@
     </section>
     <footer>
         <div class="cuerpo">
-            <p >Derechos Reservados &copy;2021 ITX - Ubicación: Bolivia</p>
+            <p class="co2" >Derechos Reservados &copy;2021 ITX - Ubicación: Bolivia</p>
             
         </div>
     </footer>
+    <script src="p.js"></script>
 </body>
 </html>
