--- a/proyecto/html/compus.html
+++ b/proyecto/html/compus.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ITX Information Tegnology eXperts</title>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="css/compu.css">
     <link rel="shortcut icon"  href="css/imagenes/mini.jpg">
 </head>
@@ -12,7 +13,7 @@
     <header>
         <div class="cuerpo">
             <p class="logo">ITX Information Tegnology eXperts</p>
-            <nav>
+            <nav class="x1">
                 <a href="proyecto.html">Inicio</a>
                 <a href="#lap">Laptops</a>
                 <a href="#compu">Computadora De Escritorio</a>
@@ -26,10 +27,11 @@
 
     <section id="menu">
         <div class="cuerpo">
-            <h2 id="lap">Laptops</h2>
+            <h2 id="lap"></h2>
+            <h2 class="co">Laptops</h2>
             <div class="menu2">
                 <div class="division">
-                    <img src="css/imagenes/lap-alto.jpg" alt="imagen" width="340">
+                    <img  src="css/imagenes/lap-alto.jpg" alt="imagen" width="340">
                 </div> 
                 
                 <div class="division">
@@ -46,7 +48,8 @@
     </section>
     <section id="menu">
         <div class="cuerpo">
-            <h2 id="compu">Computadora De Escritorio</h2>
+            <h2 id="compu"></h2>
+            <h2 class="co2">Computadora De Escritorio</h2>
             <div class="menu2">
                 <div class="division">
                     <img src="css/imagenes/compu-alto.jpg" alt="imagen" width="340">
@@ -66,9 +69,10 @@
     </section>
     <footer>
         <div class="cuerpo">
-            <p >Derechos Reservados &copy;2021 ITX - Ubicación: Bolivia</p>
+            <p class="co2" >Derechos Reservados &copy;2021 ITX - Ubicación: Bolivia</p>
             
         </div>
     </footer>
+    <script src="p.js"></script>
 </body>
 </html>
